bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: value or is not a member of Boolean
  return !weekday or vacation
                  ^