bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  return !weekday or vacation
}